classDiagram
namespace m2gui {
  class Model
  class SignalMessage
  class SignalControl
  class SignalStatus
  class SignalClosedLoopControlMode
}

Model *-- SignalControl : emit()
Model *-- SignalStatus : emit()
Model *-- SignalClosedLoopControlMode : emit()

TabDefault *-- Model
TabDefault <|-- TabOverview

TabOverview --> SignalMessage : connect()
TabOverview --> SignalControl : connect()
TabOverview --> SignalStatus : connect()
TabOverview --> SignalClosedLoopControlMode : connect()
